5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1667_2322.log
== TEST (2019-04-16 16:02:25) 
-- CODE:
bruxo= input("Nome do Bruxo: ").lower()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = s
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:02:48) 
-- CODE:
bruxo= input("Nome do Bruxo: ").lower()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = s
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:03:26) 
-- CODE:
bruxo= input("Nome do Bruxo: ".lower())
-- OUTPUT:
nome do bruxo:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:11) 
-- CODE:
bruxo= input("Nome do Bruxo: ").lower()

if (bruxo == "NEVILLE"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:07:18) 
-- CODE:
bruxo= input("Nome do Bruxo: ").lower()

if (bruxo == "NEVILLE"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- EXECUTION TIME:
0.141601
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:20) 
-- CODE:
bruxo= input("Nome do Bruxo: ").lower()

if (bruxo == "NEVILLE"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:39) 
-- CODE:
bruxo= input("Nome do Bruxo: ")

if (bruxo == "NEVILLE".lower()):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:08:40) 
-- CODE:
bruxo= input("Nome do Bruxo: ")

if (bruxo == "NEVILLE".lower()):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- EXECUTION TIME:
0.152108
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:40) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE".lower()):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:09:48) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE".lower()):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- EXECUTION TIME:
0.202398
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:24) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE".lower()):
	es=15.7654
	tp=1.3479
	print(tp/es)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:42) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE".lower()):
	es=15.7654
	tp=1.3479
	print(tp/es)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:31) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(tp/es)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
0.08549735496720667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:11:50) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:12:02) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- EXECUTION TIME:
0.134742
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
11.696268269159432
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:10) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:26) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:53) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:03) 
-- CODE:
bruxo= input("NEVILLE OU LUNA: ")

if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:08) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ")


if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:10) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ")


if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:02) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ")


if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:26:04) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ")


if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- EXECUTION TIME:
0.215443
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
11.696268269159432
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:05) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ")


if (bruxo == "NEVILLE" , "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:19) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ")


if (bruxo == "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:21) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ")


if (bruxo == "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- EXECUTION TIME:
0.173737
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:23) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ")


if (bruxo == "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:16) 
-- CODE:
bruxo= input(.lower()"NEVILLE ou LUNA: ")


if (bruxo == "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- ERROR:
File "XXXX", line 1
    bruxo= input(.lower()"NEVILLE ou LUNA: ")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:18) 
-- CODE:
bruxo= input(.lower()"NEVILLE ou LUNA: ")


if (bruxo == "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- ERROR:
File "XXXX", line 1
    bruxo= input(.lower()"NEVILLE ou LUNA: ")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:33) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ").lower()


if (bruxo == "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:44) 
-- CODE:
bruxo= input("NEVILLE ou LUNA: ").lower()


if (bruxo == "neville"):
	es=15.7654
	tp=1.3479
	print(es/tp)
	
else:
	es2=7.674
	tp2=3.789
	print(es2/tp2)
-- EXECUTION TIME:
0.175152
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
